fixed css bleed

--- a/src/shared/header.css
+++ b/src/shared/header.css
@@ -3,14 +3,13 @@
 
 #header {
     display: grid;
-    /* flex-direction: column; */
     grid-template-columns: 10% 80% 10%;
     grid-template-rows: 50% 50%;
     border: 3px solid rgb(29, 2, 2);
     text-align: center;
     border-radius: 15px;
     color: rgb(29, 2, 2);
-    font-family: 'Bad Script', cursive;
+    font-family: 'IM Fell DW Pica SC', serif;
     background-image: url(../../assets/veggies.jpg);
     margin: 30px;
     box-shadow: 0 0 15px black;
@@ -42,13 +41,6 @@ nav {
     align-items: flex-end;
 }
 
-/* button {
-    grid-column-start: 3;
-    grid-row-start: 1;
-    display: flex;
-    align-items: flex-end;
-} */
-
 a {
     flex-direction: row;
     align-content: space-around;
@@ -57,12 +49,4 @@ a {
     font-weight: 800;
 }
 
-/* dark blue
-#353A45
-
-/* light tan */
-/* #EEECCB
-
-/* red */
-/* #883F4E */ 
 
